[package]
name = "persona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["http2", "tokio", "tracing"] }
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.4"
tower-http = { version = "0.5.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
